Upgrading to Java 11